# ffmpeg_ubuntu_demo

./: CMakeLists.txt  ReadMe.md  main.c  video.c
doc/: h264.md  sdl.md
include/: common.h  main.h
include/SDL2/: SDL_config.h
include/custom/: common.h
include/custom/codec/: codec.h  decoder.h
include/custom/sdl/: sdl.h
include/custom/video/: mp42flv.h  video.h
include/video/: video.h  video_cut.h
src/: decoder.c  demo.cpp  h264.c  main.c  main.cpp  mp42flv.c  test.c  video.c  video_cut.c
src/handler/: CHandler.cpp  CHandler.h  CHandlerThread.cpp  CHandlerThread.h  CLooper.cpp  CLooper.h  CMakeLists.txt  CMessage.cpp  CMessage.h  block_list.cpp  block_list.h  common.cpp  common.h
src/player/: CDecodeFrameCallabck.h  CDecoder.cpp  CDecoder.h  CDisplayer.cpp  CDisplayer.h  CPlayer.cpp  CPlayer.h  TimeClock.h  WhiteTable.cpp  WhiteTable.h  audio_decoder.cpp  audio_decoder.h  audio_displayer.cpp  audio_displayer.h  audio_player.cpp  audio_player.h  beauty_util.cpp  beauty_util.h  pcm.h  play.md  player.cpp  player.h  video_decoder.cpp  video_decoder.h  video_displayer.cpp  video_displayer.h
src/sdl/: sdl.c
test_dir/: marvel.h264
